RESOLVED FIXED109526
REGRESSION (r142520?): Space no longer scrolls the page
https://bugs.webkit.org/show_bug.cgi?id=109526
Summary REGRESSION (r142520?): Space no longer scrolls the page
Mark Rowe (bdash)
Reported 2013-02-11 17:22:17 PST
With TOT pressing the space key no longer seems to scroll the page. I narrowed it to the range r142514 - r142522. r142520 looks the most relevant.
Attachments
Patch (2.06 KB, patch)
2013-02-11 17:28 PST, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2013-02-11 17:28:14 PST
Simon Fraser (smfr)
Comment 2 2013-02-11 17:37:26 PST
Note You need to log in before you can comment on or make changes to this bug.