REGRESSION (r142520?): Space no longer scrolls the page https://bugs.webkit.org/show_bug.cgi?id=109526

Reviewed by Tim Horton.

ScrollingTree::updateTreeFromStateNode() used to bail early when it had
no children (no fixed or sticky elements), but that left updateAfterChildren()
uncalled. Fix by always calling updateAfterChildren(), which updates the scroll
position.

* page/scrolling/ScrollingTree.cpp:
(WebCore::ScrollingTree::updateTreeFromStateNode):

Canonical link: https://commits.webkit.org/127800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142561 268f45cc-cd09-0410-ab3c-d52691b4dbfc