Source/WebCore/page/scrolling/ScrollingTree.cpp
@@ -193,13 +193,11 @@ void ScrollingTree::updateTreeFromStateNode(ScrollingStateNode* stateNode)
 
     // Now update the children if we have any.
     Vector<OwnPtr<ScrollingStateNode> >* stateNodeChildren = stateNode->children();
-    if (!stateNodeChildren)
-        return;
-
-    size_t size = stateNodeChildren->size();
-    for (size_t i = 0; i < size; ++i)
-        updateTreeFromStateNode(stateNodeChildren->at(i).get());
-    
+    if (stateNodeChildren) {
+        size_t size = stateNodeChildren->size();
+        for (size_t i = 0; i < size; ++i)
+            updateTreeFromStateNode(stateNodeChildren->at(i).get());
+    }
     node->updateAfterChildren(stateNode);
 }
 
